// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketMacrosSearch /> should render TicketMacrosSearch focused 1`] = `
<div
  class="component d-flex align-items-center"
>
  <div
    class="wrapper border-0 shadow-none"
  >
    <span
      class="prefix"
    >
      <i
        class="material-icons icon bolt md-2 text-info"
      >
        bolt
      </i>
    </span>
    <input
      class="input searchInput"
      id="input-text-2"
      name="input-text-2"
      placeholder="Search macros by name, tags or body..."
      tabindex="3"
      type="text"
      value=""
    />
  </div>
  <div>
    MacroFilters
  </div>
  <i
    class="material-icons md-2 mr-3 clickable closeButton"
  >
    keyboard_arrow_up
  </i>
</div>
`;

exports[`<TicketMacrosSearch /> should render TicketMacrosSearch unfocused 1`] = `
<div
  class="component d-flex align-items-center"
>
  <div
    class="wrapper border-0 shadow-none"
  >
    <span
      class="prefix"
    >
      <i
        class="material-icons icon bolt md-2 text-info"
      >
        bolt
      </i>
    </span>
    <input
      class="input searchInput"
      id="input-text-1"
      name="input-text-1"
      placeholder="Search macros by name, tags or body..."
      tabindex="3"
      type="text"
      value=""
    />
  </div>
  <i
    class="material-icons md-2 mr-3 clickable closeButton"
  >
    keyboard_arrow_down
  </i>
</div>
`;
